Revert "Revert "Afegit el draggable del todo. Tots els vcomponent-item dintre de container. Bug amb els overflows""
This reverts commit 6a4a268870d3d4ec8174f03035883b977f820755.

--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ html, body {
   padding: 0;
   color: white;
   background: #0ac2d2;
-  overflow: scroll; }
+  overflow: hidden; }
 
 .container-fluid {
  /*margin-top: 70px;*/
